--- a/style.css
+++ b/style.css
@@ -17,9 +17,28 @@ h2 {
 }
 
 .landing-icon {
-  margin: 0 0.3em;
+  margin: 0.7em 0.3em;
+  color: black;
 }
 
 .landing-icon:hover {
   color: lightskyblue;
+}
+
+.technologies ul li {
+  display: inline-block;
+  margin: 12px;
+  max-width: 120px;
+  min-width: 100px;
+  max-height: 124px;
+  min-height: 124px;
+  background-color: white;
+  position: relative;
+  color: rgba(0, 0, 0, 0.87);
+}
+
+.technologies li p {
+  margin: 0;
+  padding: 0;
+  font-size: 0.8em;
 }
