--- a/style.css
+++ b/style.css
@@ -27,14 +27,12 @@ h2 {
 
 .technologies ul li {
   display: inline-block;
-  margin: 12px;
+  margin: 0.5em;
   max-width: 120px;
   min-width: 100px;
   max-height: 124px;
   min-height: 124px;
   background-color: white;
-  position: relative;
-  color: rgba(0, 0, 0, 0.87);
 }
 
 .technologies li p {
