--- a/style.css
+++ b/style.css
@@ -40,3 +40,15 @@ h2 {
   padding: 0;
   font-size: 0.8em;
 }
+
+.technologies i {
+  font-size: 4em;
+}
+
+.python-icon {
+  color: #407db0;
+}
+
+.hoveredIcon {
+  font-size: 1.2em;
+}
