--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,81 +1,245 @@
 body {
-  text-align: center;
-  font-family: 'Archivo', sans-serif;
-  background-position: center center;  
-  background-attachment: fixed;
+  font-family: "Lato", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.site-wrapper {
+  position: relative;
+  overflow: hidden;
+  padding: 20px 0;
+  background-color: #e9e9e9;
+  /* background-color: #2b587d; */
+}
+
+.site-wrapper .nav-buttons a {
+  color: #000000;
+}
+
+.site-wrapper .nav-buttons a:hover {
+  color: #000000;
+}
+
+.site-wrapper .nav-buttons a:before {
+  background-color: #000000;
+}
+
+/* 
+------------------------
+----- Landing Page -----
+------------------------
+*/
+
+.landing-wrapper {
+  position: relative;
+  height: 100vh;
+  min-height: 500px;
+  max-height: 1080px;
+  background: url("../img/bgbg.jpg");
   background-size: cover;
-  color: #dfdfdf;
+  overflow: hidden;
+  background-position: center;
+  padding: 20px 15px;
 }
 
-body {
-  background: linear-gradient(270deg, #4490e6, #2c7edb, #257fe6);
-  background-size: 600% 600%;
-  -webkit-animation: AnimationName 30s ease infinite;
-  -moz-animation: AnimationName 30s ease infinite;
-  animation: AnimationName 30s ease infinite;
+.landing-content {
+  position: relative;
+  z-index: 10;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 50%
+  }
+
+.landing-content h1, h2 {
+  margin: 0;
 }
 
-@-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+.landing-content h1 {
+  color: #fff;
+  font-weight: 900;
+  font-size: 5em;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  line-height: 1em;
 }
 
-@-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+.landing-content h2 {
+  color: #a0cfee;
+  font-weight: 500;
+  font-size: 2em;
+  margin-bottom: 15px;
 }
 
-@keyframes AnimationName { 
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+.overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #054570cc;
+  z-index: 1;
 }
+
+/* 
+-------------------
+----- Nav Bar -----
+-------------------
+*/
 
 nav {
-  background-color: transparent;
+  position: relative;
+  z-index: 10;
+  overflow: hidden;
+  text-align: center;
 }
 
-.nav-wrapper a {
-  color: #dfdfdf;
+nav a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 14px 16px;
+  margin: 0 0.3em;
+  font-size: 1.2em;
 }
 
-h2 {
-  font-size: 4em;
+.nav-buttons a {
+  position: relative;
+  color: #ffffff;
+  text-decoration: none;
 }
+
+.nav-buttons a:hover {
+  color: #ffffff;
+}
+
+.nav-buttons a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #ffffff;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+	-moz-transition: all 0.3s ease-in-out 0s;
+	-ms-transition: all 0.3s ease-in-out 0s;
+	-o-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.nav-buttons a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+/* 
+------------------
+----- Footer -----
+------------------
+*/
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #052f4b;
+  color: white;
+  text-align: center;
+  z-index: 10;
+}
+
+.footer p {
+  display: inline-block;
+  margin-right: 1.6em;
+}
+
+.footer .landing-icon {
+  margin: 0.7em 0.4em;
+}
+
+/* 
+-------------------------
+----- Landing Icons -----
+-------------------------
+*/
 
 .landing-icon {
-  margin: 0.7em 0.3em;
+  margin: 0.7em 0.2em;
   color: #dfdfdf;
+  -webkit-transition: all 0.3s ease; 
+	-moz-transition: all 0.3s ease; 
+	-ms-transition: all 0.3s ease; 
+	-o-transition: all 0.3s ease; 
+  transition: all 0.3s ease; 
   transition: all 0.3s ease; 
 }
 
 .landing-icon:hover {
-  color: #FF9612;
+  /* color: #02b3b8; */
+  /* color: #a0cfee; */
+  transform: scale(1.5);
 }
 
-.headline4 {
-  position: relative;
-  /* margin: 0 0 15px; */
-  font-size: 4em;
+/* 
+-----------------------
+----- About Page -----
+-----------------------
+*/
+
+.about-wrapper {
+  margin: 0 auto;
+  width: 60vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "profile-image about-content"
+                       "profile-image skills";
+}
+
+.about-content {
+  grid-area: about-content;
+  line-height: 2em;
 }
 
 .skill-container {
-  padding: 1em;
-  background-color: #ffffff;
-  color: #4d4d4d;
+  grid-area: skills
+}
+
+.about-content a {
+  color: #000000;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.profile-image {
+  grid-area: profile-image
+}
+
+.profile-image img {
+  width: 80%;
+  border-radius: 0.8em;
+  margin-top: 1em;
+}
+
+.skill-container {
   border-radius: 1em;
   margin-bottom: 4em;
 }
 
 .skill-container h6 {
-  margin: 0 0 0.5em 0;  
+  margin: 0 0 0.5em 0;
 }
 
 .skillbox p {
   margin: 0.1em 0;
-  padding: 0;
   font-size: 0.8em;
 }
 
@@ -83,191 +247,221 @@ h2 {
   font-size: 3em;
 }
 
-.python-icon {
-  color: #407db0;
+.skillbox div {
+  display: inline-block;
+  margin: 0 0.8em 0.8em 0.8em;
+  text-align: center;
 }
 
-.hoveredIcon {
-  font-size: 1.2em;
-}
 
-.skillbox{
-  display: grid;
-  width: 100%;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "";
-}
 
-.front-end, .back-end {
+/* 
+-------------------------
+----- Projects Page -----
+-------------------------
+*/
+
+.projects-wrapper {
   margin: 0 auto;
+  width: 70vw;
+  margin-top: 1em;
+  text-align: center;
 }
 
-.project-box {
+.project-card {
   display: grid;
-  width: 100%;
+  margin-bottom: 4em;
+  background-color: #ffffff;
+  box-shadow: 0 50px 100px rgba(50,50,93,.05), 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.1);
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 4em 4em 6em 10em;
-  grid-template-areas: "preview-image project-title"
-                       "preview-image project-buttons"
-                       "preview-image project-desc"
-                       "preview-image project-tech";
-}
-
-@media only screen and (max-width: 890px) {
-  .project-box {
-    display: inline-block;
-  }
-  .preview-image, .project-title, .project-buttons, .project-desc, .project-tech {
-    margin-bottom: 1em;
-  }
+  grid-template-rows: 1fr;
+  grid-template-areas: "preview-image project-content"
+                       "project-footer project-footer";
 }
 
 .preview-image {
-  grid-area: preview-image;
+  width: 100%;
+  background-color: #052f4bcc;
+}
+
+.project-content {
+  grid-area: project-content;
+  padding-top: 1em;
+}
+
+.project-footer {
+  grid-area: project-footer;
 }
 
 .project-title {
-  grid-area: project-title;
+  text-align: center;
 }
 
 .project-buttons {
-  grid-area: project-buttons;
-}
-
-.project-desc {
-  grid-area: project-desc;
-  padding: 0 3em;
-}
-
-.project-tech {
-  grid-area: project-tech;
-}
-
-.project-box img {
-  border-radius: 1em;
-}
-
-.project-box h4 {
-  margin: 0;
-}
-
-.project-box li {
-  display: inline-block;
-  border: 1px solid #dfdfdf;
-  background-color: #4d4d4d;
-  padding: 0.5em;
-  border-radius: 0.5em;
-  font-size: 0.8em;
-  color: white;
-  margin-bottom: 1em;
-}
-
-.project-box ul {
-  margin: 0;
-  padding: 0;
+  text-align: center;
 }
 
 .project-button {
-  color: #dfdfdf;
+  color: #ffffff;
   margin: 0 0.5em;
-  border: 1px solid #dfdfdf;
+  border: 1px solid #000000;
+  background-color: #052f4b;
   padding: .4em;
   border-radius: 0.2em;
-  transition: all 0.3s ease; 
+  transition: all 0.3s; 
   display: inline-block;
-}
-
-.project-box span {
-  display: inline-block;
-  margin-bottom: 1em;
-}
-
-.project-box ul {
-  display: inline-block;
-  margin-top: 2em;
+  text-decoration: none;
 }
 
 .project-button:hover {
-  background-color: #FF9612;
+  background-color: #1d7ab8;
+}
+
+.project-desc p {
+  margin: 0;
+  padding: 0 2.3em;
+}
+
+.project-tech {
+  width: 100%;
+  text-align: center;
+}
+
+.project-tech ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.project-tech li {
+  display: inline-block;
+  border-radius: 4px;
+  border: 2px solid #052f4bcc;
+  padding: 8px;
+  margin-bottom: 0.3em;
+  font-size: .85em;
+  color: #000000;
+}
+
+.project-title, .project-buttons, .project-desc, .project-tech {
+  margin-bottom: 2em;
 }
 
 .punchcard-img {
-  margin-left: 15em;
-}
-
-@media only screen and (max-width: 890px) {
-  .punchcard-img {
-    margin: 0 0 1em 0;
-  }
-  .project-box ul {
-    margin: 0;
-  }
-}
-
-hr.style { 
-  height: 30px; 
-  border-style: solid; 
-  border-color: #dfdfdf;
-  border-width: 1px 0 0 0; 
-} 
-
-hr.style :before { 
-  display: block; 
-  height: 30px; 
-  margin-top: -31px; 
-  border-style: solid; 
-  border-color: #dfdfdf;
-  border-width: 0 0 1px 0; 
-}
-
-.skill-container hr {
-  margin-bottom: 1em;
-}
-
-.about-desc {
-  font-family: sans-serif;
-  font-size: 1.4em;
-  text-align: left;
-  padding: 0 2em;
-  display: inline-block;
-  vertical-align: top;
-  width: 40vw;
-}
-
-.about-img {
-  display: inline-block;
-}
-
-.about-img img {
-  height: 20em;
+  margin: 0 auto;
+  width: 30%;
   border-radius: 1em;
 }
 
-.about-container {
-  text-align: left;
-  margin-bottom: 1em;
+.goodmarket-img {
+  height: 100%;
 }
 
-.about-desc a {
-  color: #dfdfdf;
-  text-decoration: underline;
+.project-prompt {
+  text-align: center;
+  font-style: italic;
+  font-size: 0.7em;
+  padding: 1em;
 }
 
-/* .about-container p {
+/* 
+------------------
+----- Header -----
+------------------
+*/
+
+.page-header {
+  text-align: center;
+  background-color: #052f4b;
+  color: #ffffff;
+  padding: 1em;
+  margin-top: 1em;
+}
+
+.page-header h1, h3 {
   margin: 0;
-  padding: 0;
-} */
+}
 
-@media only screen and (max-width: 890px) {
-  .about-container {
-    text-align: center;
+/* 
+-------------------------
+----- Media Queries -----
+-------------------------
+*/
+
+@media only screen and (max-width : 992px) {
+  .landing-content {
+    margin-top: 1em;
+  }
+
+  .landing-content h1 {
+    font-size: 3em;
+    top: 20%;
+  }
+
+  .landing-content h2 {
+    font-size: 1.4em;
   }
 }
 
-@media only screen and (max-width: 670px) {
-  .about-desc {
+@media only screen and (max-width : 571px) {
+  .landing-content {
     width: 100%;
-    padding: 0;
+  }
+
+  .landing-content h2 {
+    font-size: 1.2em;
+  }
+  .projects-wrapper {
+    width: 90vw;
+  }
+  .footer p {
+    margin: 0;
+  }
+  .about-wrapper {
+    width: 70vw;
+  }
+}
+
+@media only screen and (max-width : 1263px) {
+  .project-card {
+    display: inline-block;
+    margin: 0 auto;
+    margin-bottom: 4em;
+  }
+  .punchcard-img {
+    margin-top: 1em;
+  }
+}
+
+@media only screen and (max-width : 1302px) {
+  .about-wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "profile-image about-content";
+  }
+  .skill-container {
+    grid-area: auto;
+    width: 200%;
+  }
+}
+
+@media only screen and (max-width : 910px) {
+  .about-wrapper {
+    display: inline-block;
+    margin: 0 auto;
+  }
+  .skill-container {
+    grid-area: auto;
+    width: 100%;
+  }
+  .site-wrapper {
+    text-align: center;
+  }
+  .about-content p {
+    text-align: left;
+  }
+  .skillbox div {
+    margin: 0 0.4em 0.8em 0.4em;
+    text-align: center;
   }
 }
